--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 .ipynb_checkpoints/blood-pressure-newlogs-checkpoint.ipynb
+data/.ipynb_checkpoints/new_bp_log-checkpoint.csv
+.ipynb_checkpoints/blood-pressure-newlogs-checkpoint.ipynb
