--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .ipynb_checkpoints/blood-pressure-newlogs-checkpoint.ipynb
 data/.ipynb_checkpoints/new_bp_log-checkpoint.csv
 .ipynb_checkpoints/blood-pressure-newlogs-checkpoint.ipynb
+.ipynb_checkpoints/blood-pressure-newlogs-checkpoint.ipynb
+.ipynb_checkpoints/datetime_validate-checkpoint.ipynb
+.vscode/launch.json
