Restructured code a bit
Moved the crappy statistics part at the bottom of the notebook.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data/.ipynb_checkpoints/new_bp_log-checkpoint.csv
 .ipynb_checkpoints/blood-pressure-newlogs-checkpoint.ipynb
 .ipynb_checkpoints/datetime_validate-checkpoint.ipynb
 .vscode/launch.json
+.ipynb_checkpoints/bplogs_analyze-checkpoint.ipynb
