changed statistics QQPLOT

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ data/.ipynb_checkpoints/new_bp_log-checkpoint.csv
 .ipynb_checkpoints/datetime_validate-checkpoint.ipynb
 .vscode/launch.json
 .ipynb_checkpoints/bplogs_analyze-checkpoint.ipynb
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
